# maxq

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sh  pyproject.toml  pytest.ini  setup.py
.github/actions/maxq-action/: action.yml
.github/workflows/: ci.yml  docker.yml  example-maxq-ci.yml  maxq-ci.yml  release.yml  typecheck.yml
config/: maxq.example.yaml
evals/: chatgpt_prompts_eval.json
maxq/: autoconfig.py  backfill.py  chat.py  cleanup.py  cli.py  component_generator.py  config.py  data_sources.py  eval.py  eval_llm_judge.py  ragas_utils.py  report_generator.py  search_engine.py  studio.py  utils.py
maxq/adapters/: __init__.py  embedder_cloud.py  embedder_local.py  embedder_stub.py  embedder_tei.py  huggingface.py  qdrant_retriever.py  qdrant_sink.py
maxq/core/: __init__.py  baseline.py  chunking.py  config.py  dataset.py  embedding.py  eval.py  evalpack.py  ids.py  onboarding.py  report.py  runner.py  runs.py  testconfig.py  types.py
maxq/core/assertions/: __init__.py  base.py  basic.py  content.py  llm.py  metrics.py  registry.py  semantic.py
maxq/core/judge/: __init__.py  llm_judge.py  prompts.py
maxq/core/rag/: __init__.py  pipeline.py  speculative.py  standard.py
maxq/db/: __init__.py  migrations.py  sqlite.py
maxq/server/: database.py  dependencies.py  indexing_models.py  indexing_service.py  main.py  models.py
maxq/server/routers/: backfill.py  chat.py  cleanup.py  datasets.py  evals.py  index.py  indexing.py  jobs.py  playground.py  projects.py  runs.py  search.py  settings.py  tuning.py
maxq/worker/: __init__.py  worker.py
stes/: README.md  main.py  pyproject.toml
studio-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
studio-ui/src/app/: globals.css  layout.tsx  page.tsx
studio-ui/src/app/access-management/: page.tsx
studio-ui/src/app/api/health/: route.ts
studio-ui/src/app/api/projects/: route.ts
studio-ui/src/app/api/projects/[id]/: route.ts
studio-ui/src/app/api/settings/api-keys/: route.ts
studio-ui/src/app/api/settings/api-keys/test/: route.ts
studio-ui/src/app/backups/: page.tsx
studio-ui/src/app/billing/: page.tsx
studio-ui/src/app/chat/: page.tsx
studio-ui/src/app/cleanup/: page.tsx
studio-ui/src/app/clusters/: page.tsx
studio-ui/src/app/get-started/: page.tsx
studio-ui/src/app/hybrid-cloud/: page.tsx
studio-ui/src/app/project/[id]/: page.tsx
studio-ui/src/app/project/[id]/evals/: page.tsx
studio-ui/src/app/project/[id]/export/: page.tsx
studio-ui/src/app/project/[id]/indexing/: page.tsx
studio-ui/src/app/project/[id]/playground/: page.tsx
studio-ui/src/app/project/[id]/settings/: page.tsx
studio-ui/src/app/project/[id]/tuning/: page.tsx
studio-ui/src/app/settings/: page.tsx
studio-ui/src/components/: AppSidebar.tsx  Footer.tsx  Navbar.tsx  ThemeProvider.tsx  TypingQuotes.tsx
studio-ui/src/lib/: api.ts
tere/: README.md  main.py  pyproject.toml
test/: README.md  main.py  pyproject.toml
tests/: __init__.py  conftest.py  requirements-test.txt  test_api.py  test_assertions.py  test_baseline.py  test_cli.py  test_engine.py  test_eval.py  test_indexing_service.py  test_integration.py  test_models.py  test_rag.py  test_utils.py
tools/: dev.sh  release.sh
